# solana-wallet-generator

./: Cargo.toml
src/: main.rs  sol_transfer.rs
