[package]
name = "solana-testimony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-account-decoder = "1.11.7"
solana-client = "1.11.7"
solana-sdk = "1.11.7"
spl-token = "3.5.0"
solana-program = "1.11.7"
bip0039 = "0.10.1"